# ytrd_cli

./: .gitignore  README.md  main.py  pyproject.toml
src/ytrd/: __init__.py  main.py
src/ytrd_cli/: __init__.py  main.py  vot.py
