[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytrd_cli"
version = "0.1.0"
description = "Утилита командной строки для скачивания видео с YouTube с автоматическим наложением закадрового перевода."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "mikeissaev", email = "scr89shadow@gmail.com"},
]
dependencies = [
  "requests",
  "yt-dlp",
  "tqdm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ytrd = "ytrd_cli.main:entry_point"

[tool.setuptools.packages.find]
where = ["src"]
